@@ -1,3 +1,8 @@
+2006-11-25  Joseph Myers  <joseph@codesourcery.com>
+
+	* function.c (instantiate_virtual_regs_in_insn): Call force_reg
+	inside start_sequence / end_sequence pair.
+
 2006-11-25  Steven Bosscher  <steven@gcc.gnu.org>
 
 	* jump.c (mark_all_labels): Work in cfglayout mode.
